my second commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="item">
 		<h2 id="brush">Brushes</h2>
 		 <img src="./resources/images/hacksaw.jpeg">
-		<h3 class="ddd">Hacksaw Brushes</h3>
+		<h3>Hacksaw Brushes</h3>
 		<p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <strong> Starting at <em>$</em>3.00 / brush.</strong></p>
 	</div>
 	<div class="item">
